--- a/Journal/app/states/main/views/document-history.html
+++ b/Journal/app/states/main/views/document-history.html
@@ -13,18 +13,18 @@
             <art-document-history-viewer-toolbar style="position: absolute; bottom: 10px; left: 10px; right: 570px;"></art-document-history-viewer-toolbar>
 
             <div class="ui-sidebar ui-sidebar-right">
-                <uib-tabset class="tabs-centered">
-                    <uib-tab heading="{{'History' | translate}}">
-                        <div class="layout-container">
+                <md-tabs class="layout-root">
+                    <md-tab label="{{'History' | translate}}">
+                        <md-content>
                             <art-editing-history></art-editing-history>
-                        </div>
-                    </uib-tab>
-                    <uib-tab heading="{{'Statistics' | translate}}">
-                        <div class="layout-container padding-x-xl padding-y-xl">
+                        </md-content>
+                    </md-tab>
+                    <md-tab label="{{'Statistics' | translate}}">
+                        <md-content class="padding-x-xl">
                             <art-editing-stats entity-uri="t.latestRevisionUri"></art-editing-stats>
-                        </div>
-                    </uib-tab>
-                </uib-tabset>
+                        </md-content>
+                    </md-tab>
+                </md-tabs>
             </div>
         </div>
     </div>
