--- a/Journal/app/states/main/views/document-history.html
+++ b/Journal/app/states/main/views/document-history.html
@@ -1,10 +1,12 @@
 <div class="table-layout">
     <div class="row">
         <div class="md-toolbar" layout="row">
-            <md-button class="md-icon-button" ng-click="t.navigateBack()">
+            <md-button class="md-button md-button-icon" ng-click="t.navigateBack()">
                 <i class="zmdi zmdi-chevron-left"></i>
             </md-button>
-            <span class="title" flex>{{t.file.label}}</span>
+            <div class="title" flex>
+                {{t.file.label}}
+            </div>
             <md-button class="md-button" ng-click="t.publishLatestRevision(t.file)">
                 <i class="zmdi zmdi-share"></i><span class="btn-label" translate>Share</span>
             </md-button>
