--- a/Journal/app/states/main/views/project-dashboard.html
+++ b/Journal/app/states/main/views/project-dashboard.html
@@ -1,9 +1,5 @@
+<art-file-list onload="t.getFiles"></art-file-list>
 
-<div class="view-container">
-    <div class="view-primary-content">
-        <art-file-list onload="t.getFiles"></art-file-list>
-    </div>
-    <div class="view-secondary-content">
-        <art-project-settings project="t.project"></art-project-settings>
-    </div>
-</div>
+<md-sidenav class="md-sidenav-right" md-component-id="right" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4" style="min-width: 450px;">
+    <art-project-settings project="t.project"></art-project-settings>
+</md-sidenav>
