--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -1311,7 +1311,7 @@ h4 {
 /* TOOLBARS */
 
 .toolbar {
-	height: $toolbarHeight;
+	min-height: $toolbarHeight;
 }
 
 .toolbar .col {
@@ -1345,8 +1345,8 @@ h4 {
 
 .toolbar.toolbar-floating {
 	border: 1px solid #dedede;
-	height: $toolbarHeight + 2px;
-	box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, .05);
+	background: $overlayBackgroundColor;
+	//box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, .05);
 }
 
 .toolbar.toolbar-floating .btn {
