Switched more controls to using Material.

--- a/Journal/app/states/main/views/project-dashboard.html
+++ b/Journal/app/states/main/views/project-dashboard.html
@@ -1,5 +1,7 @@
-<art-file-list onload="t.getFiles"></art-file-list>
+<div class="layout-root">
+    <art-file-list onload="t.getFiles"></art-file-list>
 
-<md-sidenav class="md-sidenav-right" md-component-id="right" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4" style="min-width: 450px;">
-    <art-project-settings project="t.project"></art-project-settings>
-</md-sidenav>
+    <md-sidenav class="md-sidenav-right" md-component-id="right" md-whiteframe="4" style="min-width: 450px;">
+        <art-project-settings project="t.project"></art-project-settings>
+    </md-sidenav>
+</div>
