--- a/Journal/app/states/main/views/document-history.html
+++ b/Journal/app/states/main/views/document-history.html
@@ -1,38 +1,35 @@
-<div class="table-layout">
-    <div class="row">
-        <div class="md-toolbar" layout="row">
-            <md-button class="md-button md-button-icon" ng-click="t.navigateBack()">
-                <i class="zmdi zmdi-chevron-left"></i>
-            </md-button>
-            <div class="title" flex>
-                {{t.file.label}}
-            </div>
-            <md-button class="md-button" ng-click="t.publishLatestRevision(t.file)">
-                <i class="zmdi zmdi-share"></i><span class="btn-label" translate>Share</span>
-            </md-button>
+<div class="layout-root" layout="column">
+    <div class="md-toolbar" layout="row">
+        <md-button class="md-button md-button-icon" ng-click="t.navigateBack()">
+            <i class="zmdi zmdi-chevron-left"></i>
+        </md-button>
+        <div class="title" flex>
+            {{t.file.label}}
         </div>
+        <md-button class="md-button" ng-click="t.publishLatestRevision(t.file)">
+            <i class="zmdi zmdi-share"></i><span class="btn-label" translate>Share</span>
+        </md-button>
     </div>
-    <div class="row expand">
-        <div class="layout-container">
-            <art-document-history-viewer></art-document-history-viewer>
 
-            <art-document-history-viewer-toolbar style="position: absolute; bottom: 10px; left: 10px; right: 570px;"></art-document-history-viewer-toolbar>
+    <div class="layout-container" flex>
+        <art-document-history-viewer></art-document-history-viewer>
 
-            <div class="ui-sidebar ui-sidebar-right">
-                <md-tabs class="layout-root">
-                    <md-tab label="{{'History' | translate}}">
-                        <md-content style="width: 100%; height: 100%;">
-                            <art-editing-history></art-editing-history>
-                        </md-content>
-                    </md-tab>
-                    <md-tab label="{{'Statistics' | translate}}">
-                        <md-content class="padding-x-xl">
-                            <art-editing-stats></art-editing-stats>
-                            <art-layer-control></art-layer-control>
-                        </md-content>
-                    </md-tab>
-                </md-tabs>
-            </div>
+        <art-document-history-viewer-toolbar style="position: absolute; bottom: 10px; left: 10px; right: 570px;"></art-document-history-viewer-toolbar>
+
+        <div class="ui-sidebar ui-sidebar-right">
+            <md-tabs class="layout-root">
+                <md-tab label="{{'History' | translate}}">
+                    <md-content style="width: 100%; height: 100%;">
+                        <art-editing-history></art-editing-history>
+                    </md-content>
+                </md-tab>
+                <md-tab label="{{'Statistics' | translate}}">
+                    <md-content class="padding-x-xl">
+                        <art-editing-stats></art-editing-stats>
+                        <art-layer-control></art-layer-control>
+                    </md-content>
+                </md-tab>
+            </md-tabs>
         </div>
     </div>
 </div>
