--- a/Journal/app/states/main/views/document.html
+++ b/Journal/app/states/main/views/document.html
@@ -1,42 +1,39 @@
-<div class="table-layout">
-    <div class="row">
-        <div class="md-toolbar" layout="row">
-            <md-button class="md-button md-button-icon" ng-click="t.navigateBack()">
-                <i class="zmdi zmdi-chevron-left"></i>
-            </md-button>
-            <div class="title" flex>
-                {{t.file.label}}
-            </div>
-            <md-button class="md-button" ng-click="t.publishLatestRevision(t.file)">
-                <i class="zmdi zmdi-share"></i><span class="btn-label" translate>Share</span>
-            </md-button>
+<div class="layout-root" layout="column">
+    <div class="md-toolbar" layout="row">
+        <md-button class="md-button md-button-icon" ng-click="t.navigateBack()">
+            <i class="zmdi zmdi-chevron-left"></i>
+        </md-button>
+        <div class="title" flex>
+            {{t.file.label}}
         </div>
+        <md-button class="md-button" ng-click="t.publishLatestRevision(t.file)">
+            <i class="zmdi zmdi-share"></i><span class="btn-label" translate>Share</span>
+        </md-button>
     </div>
-    <div class="row expand">
-        <div class="layout-container">
-            <art-document-viewer file="t.file"></art-document-viewer>
 
-            <art-document-viewer-toolbar style="position: absolute; top: 10px; left: 10px;"></art-document-viewer-toolbar>
+    <div class="layout-container" flex>
+        <art-document-viewer file="t.file"></art-document-viewer>
 
-            <div class="ui-sidebar ui-sidebar-right">
-                <md-tabs class="layout-root">
-                    <md-tab label="{{'Chat' | translate}}">
-                        <md-content style="width: 100%; height: 100%;">
-                            <art-chat-comment-list entity-uri="t.latestRevisionUri"></art-chat-comment-list>
-                        </md-content>
-                    </md-tab>
-                    <md-tab label="{{'Topics' | translate}}">
-                        <md-content style="width: 100%; height: 100%;">
-                            <art-topic-control entity-uri="t.latestRevisionUri"></art-topic-control>
-                        </md-content>
-                    </md-tab>
-                    <md-tab label="{{'Todo' | translate}}">
-                        <md-content style="width: 100%; height: 100%;">
-                            <art-task-control entity-uri="t.latestRevisionUri"></art-task-control>
-                        </md-content>
-                    </md-tab>
-                </md-tabs>
-            </div>
+        <art-document-viewer-toolbar style="position: absolute; top: 10px; left: 10px;"></art-document-viewer-toolbar>
+
+        <div class="ui-sidebar ui-sidebar-right">
+            <md-tabs class="layout-root">
+                <md-tab label="{{'Chat' | translate}}">
+                    <md-content style="width: 100%; height: 100%;">
+                        <art-chat-comment-list entity-uri="t.latestRevisionUri"></art-chat-comment-list>
+                    </md-content>
+                </md-tab>
+                <md-tab label="{{'Topics' | translate}}">
+                    <md-content style="width: 100%; height: 100%;">
+                        <art-topic-control entity-uri="t.latestRevisionUri"></art-topic-control>
+                    </md-content>
+                </md-tab>
+                <md-tab label="{{'Todo' | translate}}">
+                    <md-content style="width: 100%; height: 100%;">
+                        <art-task-control entity-uri="t.latestRevisionUri"></art-task-control>
+                    </md-content>
+                </md-tab>
+            </md-tabs>
         </div>
     </div>
 </div>
