--- a/Journal/app/states/main/views/recently-used.html
+++ b/Journal/app/states/main/views/recently-used.html
@@ -1,1 +1,3 @@
-<art-file-list onload="t.getRecentlyUsedFiles"></art-file-list>
+<div class="layout-root">
+    <art-file-list onload="t.getRecentlyUsedFiles"></art-file-list>
+</div>
