--- a/Journal/app/states/main/views/document-history.html
+++ b/Journal/app/states/main/views/document-history.html
@@ -17,7 +17,7 @@
         <art-document-history-viewer-toolbar style="position: absolute; bottom: 10px; left: 10px; right: 570px;"></art-document-history-viewer-toolbar>
 
         <div class="ui-sidebar ui-sidebar-right">
-            <md-tabs class="layout-root">
+            <md-tabs class="layout-root" md-border-bottom>
                 <md-tab label="{{'History' | translate}}">
                     <md-content style="width: 100%; height: 100%;">
                         <art-editing-history></art-editing-history>
