--- a/Journal/app/states/main/views/document.html
+++ b/Journal/app/states/main/views/document.html
@@ -17,7 +17,7 @@
         <art-document-viewer-toolbar style="position: absolute; top: 10px; left: 10px;"></art-document-viewer-toolbar>
 
         <div class="ui-sidebar ui-sidebar-right">
-            <md-tabs class="layout-root">
+            <md-tabs class="layout-root" md-border-bottom>
                 <md-tab label="{{'Chat' | translate}}">
                     <md-content style="width: 100%; height: 100%;">
                         <art-chat-comment-list entity-uri="t.latestRevisionUri"></art-chat-comment-list>
