--- a/Journal/app/states/main/views/document-history.html
+++ b/Journal/app/states/main/views/document-history.html
@@ -11,7 +11,7 @@
         </md-button>
     </div>
 
-    <div class="layout-container" flex>
+    <div class="layout-container viewer-container" flex>
         <art-document-history-viewer></art-document-history-viewer>
 
         <art-document-history-viewer-toolbar style="position: absolute; bottom: 10px; left: 10px; right: 570px;"></art-document-history-viewer-toolbar>
