--- a/Journal/app/states/main/views/document.html
+++ b/Journal/app/states/main/views/document.html
@@ -11,7 +11,7 @@
         </md-button>
     </div>
 
-    <div class="layout-container" flex>
+    <div class="layout-container viewer-container" flex>
         <art-document-viewer file="t.file"></art-document-viewer>
 
         <art-document-viewer-toolbar style="position: absolute; top: 10px; left: 10px;"></art-document-viewer-toolbar>
