--- a/Journal/app/states/main/views/document-history.html
+++ b/Journal/app/states/main/views/document-history.html
@@ -14,17 +14,17 @@
     <div class="layout-container viewer-container" flex>
         <art-document-history-viewer></art-document-history-viewer>
 
-        <art-document-history-viewer-toolbar style="position: absolute; bottom: 10px; left: 10px; right: 570px;"></art-document-history-viewer-toolbar>
+        <art-document-history-viewer-toolbar></art-document-history-viewer-toolbar>
 
         <div class="ui-sidebar ui-sidebar-right">
             <md-tabs class="layout-root" md-border-bottom>
                 <md-tab label="{{'History' | translate}}">
-                    <md-content style="width: 100%; height: 100%;">
+                    <md-content layout="column" layout-fill>
                         <art-editing-history></art-editing-history>
                     </md-content>
                 </md-tab>
                 <md-tab label="{{'Statistics' | translate}}">
-                    <md-content class="padding-x-xl">
+                    <md-content layout="column" layout-fill class="padding-x-xl padding-y-xl">
                         <art-editing-stats></art-editing-stats>
                         <art-layer-control></art-layer-control>
                     </md-content>
@@ -33,3 +33,14 @@
         </div>
     </div>
 </div>
+<style type="text/css">
+    art-document-history-viewer-toolbar {
+        position: absolute;
+        top: 0;
+        bottom: 10px;
+        left: 10px;
+        right: 550px;
+        bottom: 10px;
+        pointer-events: none;
+    }
+</style>
