--- a/Journal/app/style.scss
+++ b/Journal/app/style.scss
@@ -1034,6 +1034,10 @@ h4 {
 	height: 100%;
 }
 
+.hittest-invisible {
+	pointer-events: none;
+}
+
 .scroll-vertical {
 	overflow-y: scroll;
 }
@@ -1728,6 +1732,11 @@ div[contenteditable] {
 
 input[disabled] {
 	opacity: .5;
+}
+
+button,
+md-slider {
+	pointer-events: visiblePainted;
 }
 
 button[disabled],
@@ -2904,4 +2913,13 @@ iframe {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
+}
+
+// SVG
+svg .theme-fill {
+	fill: #686868 !important;
+}
+
+svg .theme-stroke {
+	stroke: #686868 !important;
 }
